--- a/style.css
+++ b/style.css
@@ -135,3 +135,4 @@ Now that your board is looking great and you've become a css selector master, he
 2. Add HTML to the index.html file that gives the person looking at your page all of the rules of checkers. This can be done however you want to. Then write your own style rules to make this section of the page look great.
 3. Research a selector that we didn't use in this lab, then find a way to use it. Feel free to add HTML as needed to make the selector applicable. 
 4. Propose a different extension of your choice. Write what the extension should look like then implement it in your code. */
+/*fill*/
